# run-pycode

./: .pre-commit-hooks.yaml  README.md  setup.cfg
run_pycode/: main.py
