# setup.cfg
[metadata]
name = run-pycode
description = run your python scripts
version = 0.0.0
author = Christian Elmo
author_email = christianelmo@gmail.com
license = MIT
url = https://caramail.io

[options]
packages = find:

[options.entry_points]
console_scripts =
    run-pycode = run_pycode.main:main